add dialog receive insurance from client, and show insurance_id on client detail

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -244,6 +244,7 @@
       "btnNewFixedDeposit": "New Fixed Deposit Account",
       "btnNewRecurringDeposit": "New Recurring Deposit Account",
       "btnNewSaving": "New Saving Account",
+      "btnReceiveInsurance": "Receive Insurance",
       "btnReactivate": "Reactivate",
       "lblCifNo": "CIF #",
       "btnApplication": "Applications",
@@ -505,19 +506,19 @@
     },
     "General_tab":{
       "GroupDetails":"Group Details",
-      "ActiveClientLoans":"Active Client Loans", 
-      "ActiveClientBorrowers": "Active Client Borrowers", 
+      "ActiveClientLoans":"Active Client Loans",
+      "ActiveClientBorrowers": "Active Client Borrowers",
       "ActiveOverdueClientLoans": "Active Overdue Client Loans",
-      "ActiveGroupLoans": "Active Group Loans",  
-      "ActiveGroupBorrowers": "Active Group Borrowers",  
-      "ActiveOverdueGroupLoans":"Active Overdue Group Loans",   
-      "ActiveClients": "Active Clients", 
+      "ActiveGroupLoans": "Active Group Loans",
+      "ActiveGroupBorrowers": "Active Group Borrowers",
+      "ActiveOverdueGroupLoans":"Active Overdue Group Loans",
+      "ActiveClients": "Active Clients",
       "ClientMembers": "Client Members",
-      "ClientMembersDiffidentOffice": "Client Members Diffident Office", 
+      "ClientMembersDiffidentOffice": "Client Members Diffident Office",
       "Name":"Name",
       "AccountNo.":"Account No.",
       "Office":"Office",
-      "CustomerDetails":"Customer Details", 
+      "CustomerDetails":"Customer Details",
       "LoanAccounts":"Loan Accounts",
       "LoanAccount": "Loan Account",
       "OriginalLoan": "Original Loan",
