--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -240,6 +240,7 @@
       "btnNewFixedDeposit": "Mở tiết kiệm cố định",
       "btnNewRecurringDeposit": "Mở Tiết kiệm Tái tục",
       "btnNewSaving": "Mở Tài khoản",
+      "btnReceiveInsurance": "Nhận tiền bảo hiểm",
       "btnReactivate": "Tái kích hoạt khách hàng",
       "lblCifNo": "Mã CIF",
       "btnApplication": "Mở tài khoản",
